--- a/SmartWallet/Base.lproj/Main.storyboard
+++ b/SmartWallet/Base.lproj/Main.storyboard
@@ -125,28 +125,28 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yuZ-lg-FHk" customClass="CardView" customModule="Moonkey" customModuleProvider="target">
                                 <rect key="frame" x="20" y="105" width="374" height="663"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" delaysContentTouches="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelectionDuringEditing="YES" rowHeight="96" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zk7-xj-69B">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" delaysContentTouches="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelectionDuringEditing="YES" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zk7-xj-69B">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="627"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="SettingsViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SettingsViewCell" id="TTx-ew-RZH" customClass="SettingsViewCell" customModule="Moonkey" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="28" width="374" height="96"/>
+                                                <rect key="frame" x="0.0" y="28" width="374" height="70"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" restorationIdentifier="TokenViewCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TTx-ew-RZH" id="QGK-zl-npE">
-                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="96"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="70"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wz1-4b-XBf" customClass="ListItemView" customModule="Moonkey" customModuleProvider="target">
-                                                            <rect key="frame" x="20" y="15" width="334" height="81"/>
+                                                            <rect key="frame" x="20" y="15" width="334" height="55"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Recovery" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQF-aj-bKP">
-                                                                    <rect key="frame" x="55" y="30.5" width="269" height="20.5"/>
+                                                                    <rect key="frame" x="55" y="17.5" width="269" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OZj-QI-sHf">
-                                                                    <rect key="frame" x="20" y="28" width="25" height="25"/>
+                                                                    <rect key="frame" x="20" y="15" width="25" height="25"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="25" id="0jr-3W-JQJ"/>
                                                                         <constraint firstAttribute="height" constant="25" id="wlh-Eq-T44"/>
@@ -255,7 +255,7 @@
                                         </constraints>
                                         <state key="normal" image="send"/>
                                         <connections>
-                                            <segue destination="4Ov-db-tfA" kind="presentation" identifier="send-token-segue" id="dZd-l1-D91"/>
+                                            <action selector="sendTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nux-WN-6ec"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qlg-ht-AIn">
@@ -266,7 +266,7 @@
                                         </constraints>
                                         <state key="normal" title="Button" image="exchange"/>
                                         <connections>
-                                            <segue destination="tZB-LC-HMu" kind="presentation" identifier="exchange-segue" id="3Tz-pZ-38e"/>
+                                            <action selector="exchangeTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iv3-Sk-CDa"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gZU-UF-NAg">
@@ -332,7 +332,7 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NHD-Ko-xJ9" customClass="CardView" customModule="Moonkey" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="280" width="414" height="636"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -353,6 +353,8 @@
                         <outlet property="contentView" destination="NHD-Ko-xJ9" id="eeF-2W-kE9"/>
                         <outlet property="tabHeaderView" destination="mta-fA-CFu" id="9iD-YK-8Gr"/>
                         <segue destination="q4a-iN-KJg" kind="presentation" identifier="show-recovery-segue" id="hba-Qg-qt2"/>
+                        <segue destination="4Ov-db-tfA" kind="presentation" identifier="send-token-segue" id="ext-vd-BlB"/>
+                        <segue destination="tZB-LC-HMu" kind="presentation" identifier="exchange-segue" id="CpW-qf-41L"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -704,17 +706,6 @@ The order of the words is important.</string>
                                         <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yW9-2M-sVc">
-                                        <rect key="frame" x="30" y="334" width="314" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="lAQ-ig-ZWG"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <state key="normal" title="Copy address and recovery phrase"/>
-                                        <connections>
-                                            <action selector="CopyAddressAction:" destination="q4a-iN-KJg" eventType="touchUpInside" id="LW2-kD-0Ye"/>
-                                        </connections>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recovery phrase" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nKv-Fh-goK">
                                         <rect key="frame" x="30" y="30" width="314" height="21"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
@@ -736,9 +727,9 @@ The order of the words is important.</string>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="dmv-rO-sTw"/>
                                         </constraints>
-                                        <state key="normal" title="Backup by email"/>
+                                        <state key="normal" title="Copy address and recovery phrase"/>
                                         <connections>
-                                            <action selector="backupByEmailAction:" destination="q4a-iN-KJg" eventType="touchUpInside" id="iV6-8K-DY4"/>
+                                            <action selector="CopyAddressAction:" destination="q4a-iN-KJg" eventType="touchUpInside" id="2tW-OB-O78"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RyX-95-Ldu" customClass="CardView" customModule="Moonkey" customModuleProvider="target">
@@ -767,9 +758,7 @@ The order of the words is important.</string>
                                     <constraint firstAttribute="trailing" secondItem="RyX-95-Ldu" secondAttribute="trailing" constant="30" id="0FR-AI-i5Z"/>
                                     <constraint firstAttribute="trailing" secondItem="Mrj-Cd-Z47" secondAttribute="trailing" constant="30" id="4ad-AT-NfN"/>
                                     <constraint firstAttribute="trailing" secondItem="nKv-Fh-goK" secondAttribute="trailing" constant="30" id="4iz-9L-VJZ"/>
-                                    <constraint firstItem="yW9-2M-sVc" firstAttribute="leading" secondItem="9hg-28-ISi" secondAttribute="leading" constant="30" id="7WP-2k-gOd"/>
                                     <constraint firstAttribute="trailing" secondItem="MYk-co-rjj" secondAttribute="trailing" constant="30" id="81V-pQ-NkE"/>
-                                    <constraint firstAttribute="trailing" secondItem="yW9-2M-sVc" secondAttribute="trailing" constant="30" id="9Bw-Yy-U8G"/>
                                     <constraint firstItem="gBD-O3-ySf" firstAttribute="leading" secondItem="9hg-28-ISi" secondAttribute="leading" constant="30" id="Ema-Ah-8vv"/>
                                     <constraint firstAttribute="trailing" secondItem="gBD-O3-ySf" secondAttribute="trailing" constant="30" id="F6E-Nr-ndI"/>
                                     <constraint firstItem="RyX-95-Ldu" firstAttribute="leading" secondItem="9hg-28-ISi" secondAttribute="leading" constant="30" id="IK4-lJ-A5p"/>
@@ -778,7 +767,6 @@ The order of the words is important.</string>
                                     <constraint firstItem="1ya-Gb-N4K" firstAttribute="leading" secondItem="9hg-28-ISi" secondAttribute="leading" constant="30" id="QOS-fx-nDw"/>
                                     <constraint firstItem="nKv-Fh-goK" firstAttribute="top" secondItem="9hg-28-ISi" secondAttribute="top" constant="30" id="YOx-we-aRo"/>
                                     <constraint firstItem="MYk-co-rjj" firstAttribute="top" secondItem="Qy1-cG-Fgl" secondAttribute="bottom" constant="8" id="a8s-Yq-bXL"/>
-                                    <constraint firstItem="yW9-2M-sVc" firstAttribute="top" secondItem="RyX-95-Ldu" secondAttribute="bottom" id="ajF-Ux-ItU"/>
                                     <constraint firstItem="Qy1-cG-Fgl" firstAttribute="top" secondItem="Mrj-Cd-Z47" secondAttribute="bottom" constant="20" id="avF-7y-gxM"/>
                                     <constraint firstItem="nKv-Fh-goK" firstAttribute="leading" secondItem="9hg-28-ISi" secondAttribute="leading" constant="30" id="b59-qB-1uO"/>
                                     <constraint firstItem="Mrj-Cd-Z47" firstAttribute="leading" secondItem="9hg-28-ISi" secondAttribute="leading" constant="30" id="biz-Rb-oxT"/>
@@ -1622,8 +1610,8 @@ The order of the words is important.</string>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="MZs-3v-s8X"/>
-        <segue reference="dek-VQ-0nm"/>
-        <segue reference="Eqw-uf-ziv"/>
+        <segue reference="yog-dw-0Rd"/>
+        <segue reference="hba-Qg-qt2"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="MOONKEY" width="476" height="79"/>
